--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -1,24 +1,135 @@
-productName: "HelloVite"
-appId: "io.vite.electron.template"
+productName: HelloVite
+appId: io.vite.electron.template
+copyright: Copyright 2016-2021 LeXun Ltd
+npmRebuild: true
+nodeGypRebuild: false
 
+# beforeBuild: "./beforeBuild.js"
+# afterPack: "./afterPack.js"
 asar: true
+
+# files:
+#   - generated
+#   - lib/shared/catalina-sudo/sudo-askpass.osascript.js
+
 # compression: maximum
 
 directories:
   app: ./build
-  buildResources: "resources"
-  output: "dist"
+  buildResources: resources
+  output: dist/${os}/${arch}
+
+publish:
+  - provider: github
+    url: https://github.com/ArcherTrister/ElectronDemo/
+  # - provider: generic
+  #   url: http://**.**.**.**:3002/download
+# externals: ['electron-edge-js']
 
 win:
+  icon: ./build/icon.ico
   target:
-    - "zip"
-    # - "nsis"
-
-linux:
-  target:
-    - "zip"
-    - "deb"
+    target: nsis
+    # arch:
+    #   - x64
+    #   - ia32
+    # target: zip
 
 nsis:
-  oneClick: true
-  perMachine: true
+  oneClick: false # 是否一键安装
+  perMachine: true # 是否显示辅助安装程序的安装模式安装程序页面（选择按机器还是按用户）
+  allowElevation: true  # 允许请求提升。 如果为false，则用户必须使用提升的权限重新启动安装程序。
+  allowToChangeInstallationDirectory: true  # 允许修改安装目录
+  installerIcon: ./build/installerIcon.ico # 安装图标
+  # uninstallerIcon: ./build/icons/bbb.ico #卸载图标
+  # installerHeaderIcon: ./build/icons/aaa.ico  # 安装时头部图标
+  createDesktopShortcut: true  # 创建桌面图标
+  createStartMenuShortcut: true # 创建开始菜单图标
+  shortcutName: HelloVite  # 图标名称
+  deleteAppDataOnUninstall: true
+  runAfterFinish: true
+  artifactName: "${productName}-Setup-${version}.${ext}"
+  # include: build/script/installer.nsh  # 包含的自定义nsis脚本
+
+# linux:
+#   target:
+#     - zip
+#     - deb
+
+# mac:
+#   icon: assets/icon.icns
+#   category: public.app-category.developer-tools
+#   hardenedRuntime: true
+#   entitlements: "entitlements.mac.plist"
+#   entitlementsInherit: "entitlements.mac.plist"
+# dmg:
+#   background: assets/dmg/background.tiff
+#   icon: assets/icon.icns
+#   iconSize: 110
+#   contents:
+#     - x: 140
+#       y: 225
+#     - x: 415
+#       y: 225
+#       type: link
+#       path: /Applications
+#   window:
+#     width: 540
+#     height: 405
+
+
+# portable:
+#   artifactName: "${productName}-Portable-${version}.${ext}"
+#   requestExecutionLevel: user
+# linux:
+#   category: Utility
+#   packageCategory: utils
+#   executableName: balena-etcher-electron
+#   synopsis: balenaEtcher is a powerful OS image flasher built with web technologies to ensure flashing an SDCard or USB drive is a pleasant and safe experience. It protects you from accidentally writing to your hard-drives, ensures every byte of data was written correctly and much more.
+#   icon: assets/iconset
+# deb:
+#   priority: optional
+#   depends:
+#     - gconf2
+#     - gconf-service
+#     - libappindicator1
+#     - libasound2
+#     - libatk1.0-0
+#     - libc6
+#     - libcairo2
+#     - libcups2
+#     - libdbus-1-3
+#     - libexpat1
+#     - libfontconfig1
+#     - libfreetype6
+#     - libgbm1
+#     - libgcc1
+#     - libgconf-2-4
+#     - libgdk-pixbuf2.0-0
+#     - libglib2.0-0
+#     - libgtk-3-0
+#     - liblzma5
+#     - libnotify4
+#     - libnspr4
+#     - libnss3
+#     - libpango1.0-0 | libpango-1.0-0
+#     - libstdc++6
+#     - libx11-6
+#     - libxcomposite1
+#     - libxcursor1
+#     - libxdamage1
+#     - libxext6
+#     - libxfixes3
+#     - libxi6
+#     - libxrandr2
+#     - libxrender1
+#     - libxss1
+#     - libxtst6
+#     - polkit-1-auth-agent | policykit-1-gnome | polkit-kde-1
+# rpm:
+#   depends:
+#     - util-linux
+# protocols:
+#   name: etcher
+#   schemes:
+#     - etcher
