--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,9 +5,11 @@ name: Build Electron App For Win/Mac
 
 # Workflow's trigger
 on:
+  # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    tags:
-      - 'v*.*.*'
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 # Workflow's jobs
 jobs:
