--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,6 +39,8 @@ jobs:
       # step2: install node env
       - name: Install Node.js
         uses: actions/setup-node@v2-beta
+        # with:
+        #   node-version: "15.3.0"
 
       # step3: npm install
       - name: npm install
