--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,10 +47,10 @@ jobs:
         run: |
           npm install
 
-      # step4: build
-      - name: create build
-        run: |
-          npm run build
+      # # step4: build
+      # - name: create build
+      #   run: |
+      #     npm run build
 
       # step5: cleanup in dist_electron
       - name: clean dist folder
