--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "dist:win": "electron-builder -w -c ./electron-builder.yml",
     "dist:mac": "electron-builder -m -c ./electron-builder.yml",
     "dist:linux": "electron-builder -l -c ./electron-builder.yml",
-    "dist:win:x64": "electron-builder -w --x64 -c ./electron-builder.yml --publish=never",
+    "dist:win:x64": "electron-builder -w --x64 -c ./electron-builder.yml",
     "dist:mac:x64": "electron-builder -m --x64 -c ./electron-builder.yml",
     "dist:linux:x64": "electron-builder -l --x64 -c ./electron-builder.yml",
-    "dist:win:ia32": "electron-builder -w --ia32 -c ./electron-builder.yml --publish=never",
+    "dist:win:ia32": "electron-builder -w --ia32 -c ./electron-builder.yml",
     "dist:mac:ia32": "electron-builder -m --ia32 -c ./electron-builder.yml",
     "dist:linux:ia32": "electron-builder -l --ia32 -c ./electron-builder.yml",
     "dist:win:armv7l": "electron-builder -w --armv7l -c ./electron-builder.yml",
