--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,18 +57,22 @@ jobs:
       #     npm run build
 
       # step5: cleanup in dist_electron
-      - name: clean dist folder
-        run: |
-          npm run clean:dist
+      # - name: clean dist folder
+      #   run: |
+      #     npm run clean:dist
 
       # step6: build app for mac/win
       - name: build windows x64 app
         if: matrix.os == 'windows-2019'
+        env:
+          GH_TOKEN: ${{ secrets.GITHUBRELEASETOKEN }}
         run: |
           npm run dist:win:x64
       
       - name: build windows x86 app
         if: matrix.os == 'windows-latest'
+        env:
+          GH_TOKEN: ${{ secrets.GITHUBRELEASETOKEN }}
         run: |
           npm run dist:win:ia32
 
@@ -78,36 +82,45 @@ jobs:
           npm run dist:mac
 
       # step5: cleanup artifacts in dist_electron
-      - name: cleanup artifacts for windows
-        if: matrix.os == 'windows-2019'
-        run: |
-          mkdir artifacts
-          mv dist/**/*.exe artifacts || true
-          mv dist/**/*.yml artifacts || true
-        
-        # npx rimraf "dist/!(*.exe|*.yml)"
+      # - name: cleanup artifacts for windows
+      #   if: matrix.os == 'windows-2019'
+      #   run: |
+      #     npx rimraf "dist/!(*.exe|*.yml)"
+# mkdir artifacts
+# mv dist/**/*.exe artifacts || true
+# mv dist/**/*.yml artifacts || true
+# npx rimraf "dist/!(*.exe|*.yml)"
 
-      - name: cleanup artifacts for macos
-        if: matrix.os == 'macos-10.15'
-        run: |
-          mkdir artifacts
-          mv dist/**/*.dmg artifacts || true
-          mv dist/**/*.yml artifacts || true
+      # - name: cleanup artifacts for windows
+      #   if: matrix.os == 'windows-latest'
+      #   run: |
+      #     npx rimraf "dist/!(*.exe|*.yml)"
+# mkdir artifacts
+# mv dist/**/*.exe artifacts || true
+# mv dist/**/*.yml artifacts || true      
+# npx rimraf "dist/!(*.exe|*.yml)"
+
+      # - name: cleanup artifacts for macos
+      #   if: matrix.os == 'macos-10.15'
+      #   run: |
+      #     mkdir artifacts
+      #     mv dist/**/*.dmg artifacts || true
+      #     mv dist/**/*.yml artifacts || true
         
         # npx rimraf "dist_electron/!(*.dmg|*.yml)"
 
       # step6: upload artifacts
-      - name: upload artifacts
-        uses: actions/upload-artifact@v2
-        with:
-          name: ${{ matrix.os }}
-          path: artifacts
+      # - name: upload artifacts
+      #   uses: actions/upload-artifact@v2
+      #   with:
+      #     name: ${{ matrix.os }}
+      #     path: artifacts
 
       # step7: create release
-      - name: release
-        uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
-        with:
-          files: "artifacts/**"
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUBRELEASETOKEN }}
+      # - name: release
+      #   uses: softprops/action-gh-release@v1
+      #   if: startsWith(github.ref, 'refs/tags/')
+      #   with:
+      #     files: "artifacts/**"
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUBRELEASETOKEN }}
